Error searching registers

--- a/projects/web/app/views/tags/crud/search.html
+++ b/projects/web/app/views/tags/crud/search.html
@@ -15,6 +15,6 @@
     </div>
 
     <div class="row col-xs-12 col-sm-12 col-md-2 pull-right no-bootstrap-padding">
-        <button class="btn btn-primary margin-bottom pull-right col-xs-12 col-sm-12 col-md-12" type="button" onclick="javascript: block('&{'crud.wait'}');">&{'crud.search'}</button>
+        <button class="btn-crud-search-form-submit btn btn-primary margin-bottom pull-right col-xs-12 col-sm-12 col-md-12" type="button" onclick="javascript: block('&{'crud.wait'}');">&{'crud.search'}</button>
     </div>
 </div>
