--- a/projects/web/app/views/Secure/layout.html
+++ b/projects/web/app/views/Secure/layout.html
@@ -1,24 +1,25 @@
 
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-    
+
     <head>
         <meta charset="utf-8">
         <title>&{'application.title'}</title>
         <link href="@{'/public/images/favicon.png'}" rel="icon" type="image/png">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-            
+
         <link href="@{'/public/stylesheets/bootstrap.min.css'}" rel="stylesheet" type="text/css">
-        <link href="@{'/public/stylesheets/login.css'}" rel="stylesheet" type="text/css">        
-        
+        <link href="@{'/public/stylesheets/login.css'}" rel="stylesheet" type="text/css">
+
     </head>
-    
+
     <body>
-        
-        #{doLayout /} 
-        
-        <script src="@{'/public/javascripts/bootstrap.min.js'}" type="text/javascript"></script>
-            
+
+        #{doLayout /}
+
+        <script type="text/javascript" src="@{'/public/javascripts/jquery-2.2.2.min.js'}"></script>
+        <script type="text/javascript" src="@{'/public/javascripts/bootstrap.min.js'}"></script>
+
     </body>
 
 </html>
