--- a/projects/web/app/views/guest/UserGroupController/list.html
+++ b/projects/web/app/views/guest/UserGroupController/list.html
@@ -25,7 +25,7 @@
     </div>
 
     <div class="row col-xs-12 col-sm-12 col-md-4 pull-right no-bootstrap-padding">
-        <button class="btn btn-primary margin-bottom col-xs-12 col-sm-12 col-md-4" type="button" onclick="javascript: block('&{'crud.wait'}');">&{'crud.search'}</button>
+        <button class="btn-crud-search-form-submit btn btn-primary margin-bottom col-xs-12 col-sm-12 col-md-4" type="button" onclick="javascript: block('&{'crud.wait'}');">&{'crud.search'}</button>
         <input class="btn btn-primary margin-bottom col-xs-12 col-sm-12 col-md-7 pull-right" type="button" onclick="javascript: location.href = '@{guest.GroupController.blank()}'; block('&{'crud.wait'}');" value="&{'crud.add', type}">
     </div>
 
