Created commons project

--- a/projects/web/app/views/guest/SpaceFileController/blank.html
+++ b/projects/web/app/views/guest/SpaceFileController/blank.html
@@ -172,7 +172,7 @@ $(function(){
             },
         })
         .done(function(data) {
-            $('#object_virtualName').val(uploadInfo.virtualName);
+            $('#object_virtualName').val(uploadInfo.name);
             callBack();
         })
         .fail(function(data) {
