--- a/projects/web/app/views/guest/InstanceController/list.html
+++ b/projects/web/app/views/guest/InstanceController/list.html
@@ -22,6 +22,9 @@
     #{crud.custom 'plugin.name'}
         ${object.plugin.name}
     #{/crud.custom}
+    #{crud.custom 'creationDate'}
+        ${object.creationDate.format()}
+    #{/crud.custom}
 
 #{/crud.table}
 
