--- a/projects/web/app/views/adm/ExecutorController/show.html
+++ b/projects/web/app/views/adm/ExecutorController/show.html
@@ -19,6 +19,19 @@
         #{crud.custom 'firewallTcpRules'}
         #{/crud.custom}
         
+        #{crud.custom 'commandLine'}        
+            #{field 'object.commandLine'}
+                <div class="form-group row ${field.errorClass ? 'has-error' : ''}">
+                    <label for="${field.id}">&{field.name}</label>
+                    <input id="${field.id}" class="form-control"  type="text" name="${field.name}" value="${field.value}" />
+                    #{ifError field.name}
+                        <span id="helpBlock2" class="help-block">${field.error.raw()}</span>
+                    #{/ifError}     
+                    <span class="help-block">*&{'commandLine.obs'}</span>                    
+                </div>
+            #{/field}            
+        #{/crud.custom}
+        
         #{crud.custom 'scriptExtension'}        
             #{field 'object.scriptExtension'}
                 <div class="form-group row ${field.errorClass ? 'has-error' : ''}">
