--- a/projects/web/app/views/adm/ExecutorController/blank.html
+++ b/projects/web/app/views/adm/ExecutorController/blank.html
@@ -25,7 +25,7 @@
                     #{ifError field.name}
                         <span id="helpBlock2" class="help-block">${field.error.raw()}</span>
                     #{/ifError}     
-                    <span class="help-block">*&{'commandLine.obs'}</span>                    
+                    <span class="help-block">*&{'obs.commandLine'}</span>                    
                 </div>
             #{/field}            
         #{/crud.custom}
@@ -35,7 +35,7 @@
                 <div class="form-group row ${field.errorClass ? 'has-error' : ''}">
                     <label for="${field.id}">&{field.name}</label>
                     <input id="${field.id}" class="form-control"  type="text" name="${field.name}" value="${field.value}" />                    
-                    <span id="helpBlock2" class="help-block">${'obs.scriptExtension'}</span>
+                    <span id="helpBlock2" class="help-block">*&{'obs.scriptExtension'}</span>
                     #{ifError field.name}
                         <span id="helpBlock2" class="help-block">${field.error.raw()}</span>
                     #{/ifError} 
