--- a/projects/web/app/views/adm/ExecutorController/show.html
+++ b/projects/web/app/views/adm/ExecutorController/show.html
@@ -27,7 +27,7 @@
                     #{ifError field.name}
                         <span id="helpBlock2" class="help-block">${field.error.raw()}</span>
                     #{/ifError}     
-                    <span class="help-block">*&{'commandLine.obs'}</span>                    
+                    <span class="help-block">*&{'obs.commandLine'}</span>                    
                 </div>
             #{/field}            
         #{/crud.custom}
