--- a/projects/web/app/views/adm/ExecutorController/blank.html
+++ b/projects/web/app/views/adm/ExecutorController/blank.html
@@ -16,33 +16,48 @@
 
         #{crud.custom 'firewallTcpRules'}
         #{/crud.custom}
+        #{crud.custom 'executionScriptEnabled'}
+        #{/crud.custom}
+        #{crud.custom 'executionScript'}
+        #{/crud.custom}
                 
-        #{crud.custom 'commandLine'}        
+        #{crud.custom 'commandLine'}  
+        
+            #{field 'object.executionScriptEnabled'}            
+            <div class="form-group row ${field.errorClass ? 'has-error' : ''}">                     
+                <input type="checkbox" id="${field.id}" name="${field.name}" class="icheck" value="true" 
+                         ${ field.value ? 'checked="true" '.raw() : ''} /> 
+                <input type="hidden" name="${field.name}" value="false" />                  
+                <label for="${field.id}" style="margin-left: 10px;">&{field.name}</label>                   
+                #{ifError field.name}
+                    <span id="helpBlock2" class="help-block">${field.error.raw()}</span>
+                #{/ifError} 
+            </div>            
+            #{/field}
+        
+            #{field 'object.executionScript'}
+            <div id="executionScriptDiv" style="${object.executionScriptEnabled ? '' : 'display: none;'}" class="form-group row ${field.errorClass ? 'has-error' : ''}">
+                <label for="${field.id}">&{field.name}</label>
+                <textarea id="${field.id}" name="${field.name}" class="form-control" rows="5">${field.value}</textarea>
+                #{ifError field.name}
+                    <span id="helpBlock2" class="help-block">${field.error.raw()}</span>
+                #{/ifError} 
+            </div>
+            #{/field}
+                 
             #{field 'object.commandLine'}
-                <div class="form-group row ${field.errorClass ? 'has-error' : ''}">
-                    <label for="${field.id}">&{field.name}</label>
-                    <input id="${field.id}" class="form-control"  type="text" name="${field.name}" value="${field.value}" />
-                    #{ifError field.name}
-                        <span id="helpBlock2" class="help-block">${field.error.raw()}</span>
-                    #{/ifError}     
-                    <span class="help-block">*&{'obs.commandLine'}</span>                    
-                </div>
-            #{/field}            
+            <label for="${field.id}">&{field.name}</label>
+            <div class="form-group row ${field.errorClass ? 'has-error' : ''}">
+                <label id="applicationLabel" style="font-weight: normal !important;${object.executionScriptEnabled ? '' : 'display: none;'}">application.sh</label>
+                <input id="${field.id}" class="form-control" type="text" name="${field.name}" value="${field.value}" />
+	            #{ifError field.name}
+	                <span id="helpBlock2" class="help-block">${field.error.raw()}</span>
+	            #{/ifError} 
+                <span class="help-block">*&{'obs.commandLine'}</span>    
+            </div>            
+            #{/field}        
         #{/crud.custom}
         
-        #{crud.custom 'scriptExtension'}        
-            #{field 'object.scriptExtension'}
-                <div class="form-group row ${field.errorClass ? 'has-error' : ''}">
-                    <label for="${field.id}">&{field.name}</label>
-                    <input id="${field.id}" class="form-control"  type="text" name="${field.name}" value="${field.value}" />                    
-                    <span id="helpBlock2" class="help-block">*&{'obs.scriptExtension'}</span>
-                    #{ifError field.name}
-                        <span id="helpBlock2" class="help-block">${field.error.raw()}</span>
-                    #{/ifError} 
-                </div>
-            #{/field}
-        #{/crud.custom}
-
         #{crud.custom 'firewallUdpRules'}
             #{field 'object.firewallTcpRules'}
             <div class="form-group row ${field.errorClass ? 'has-error' : ''}">
@@ -163,6 +178,17 @@
         selectableOptgroup: false,
         afterSelect: disableItensFromSelectedGroup,
         afterDeselect: disableItensFromSelectedGroup
+    });
+    
+    $('#object_executionScriptEnabled').on('ifChanged', function(){
+        if($(this).is(":checked")) {     
+            $('#executionScriptDiv').show();
+            $('#applicationLabel').show();
+        } else {            
+            $('#executionScriptDiv').hide();
+            $('#applicationLabel').hide();
+        }
+        
     });
 
 </script>
